--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,9 @@ subprojects {
         implementation 'org.springframework.boot:spring-boot-starter-security'
         implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
         implementation group: 'org.hibernate', name: 'hibernate-validator', version: '7.0.1.Final'
+        implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
+        runtime 'io.jsonwebtoken:jjwt-impl:0.11.2'
+        runtime 'io.jsonwebtoken:jjwt-jackson:0.11.2'
         compileOnly 'org.projectlombok:lombok'
         developmentOnly 'org.springframework.boot:spring-boot-devtools'
         annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
